fix: get profile return object structure
